--- a/accuratelauncher/package.json
+++ b/accuratelauncher/package.json
@@ -8,17 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
+    "codemirror": "^6.0.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "highlight.js": "^11.8.0",
     "v-clipboard": "^3.0.0-next.1",
     "vue": "^3.2.13",
+    "vue-codemirror6": "^1.1.27",
     "vue-cookies": "^1.8.3",
     "vue-diff": "^1.2.4",
     "vue-json-viewer": "^3.0.4",
