--- a/accuratelauncher/package.json
+++ b/accuratelauncher/package.json
@@ -8,12 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-json": "6.0.1",
+    "@codemirror/lang-markdown": "6.2.1",
+    "@codemirror/lang-python": "6.1.3",
+    "@codemirror/lang-xml": "6.0.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "6.20.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@uiw/codemirror-theme-github": "^4.21.18",
     "axios": "^1.4.0",
     "codemirror": "^6.0.1",
     "core-js": "^3.8.3",
@@ -21,11 +27,14 @@
     "highlight.js": "^11.8.0",
     "v-clipboard": "^3.0.0-next.1",
     "vue": "^3.2.13",
+    "vue-codemirror": "^6.1.1",
     "vue-codemirror6": "^1.1.27",
     "vue-cookies": "^1.8.3",
     "vue-diff": "^1.2.4",
     "vue-json-viewer": "^3.0.4",
+    "vue-markdown-wasm": "^0.3.12",
     "vue-router": "^4.2.2",
+    "vue3-ace-editor": "^2.2.3",
     "vuedraggable": "^4.1.0",
     "vuetify": "^3.3.3",
     "vuex": "^4.1.0"
@@ -41,6 +50,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^13.3.2",
     "vue-pug-plugin": "^2.0.3"
   },
   "eslintConfig": {
