--- a/accuratelauncher/package.json
+++ b/accuratelauncher/package.json
@@ -35,6 +35,7 @@
     "vue-markdown-wasm": "^0.3.12",
     "vue-router": "^4.2.2",
     "vue3-ace-editor": "^2.2.3",
+    "vue3-colorpicker": "^2.2.2",
     "vuedraggable": "^4.1.0",
     "vuetify": "^3.3.3",
     "vuex": "^4.1.0"
@@ -48,8 +49,10 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "raw-loader": "^4.0.2",
     "sass-loader": "^13.3.2",
     "vue-pug-plugin": "^2.0.3"
   },
